<resources>
    <string name="app_name">Harry Potter App</string>
    <string name="btnCharacterById">Character by ID</string>
    <string name="btnStaff">Hogwarts Staff</string>]
    <string name="btnCharactersHouse">Characters in a house</string>
    <string name="btnExit">Exit</string>
    <string name="tvTitleCharacter">Character</string>
    <string name="btnSearch">Search</string>
    <string name="tvSearchById">ID:</string>
    <string name="errorMessageGetCharacterById">Error to get the character from API</string>
    <string name="lblCharacterName">Name:</string>
    <string name="lblHouseName">House:</string>
    <string name="tvTitleStaff">Staff</string>
    <string name="errorMessageGetStaff">Error to get the staff from API</string>
    <string name="tvTitleStudentsByHouse">Students By House</string>
    <string name="tvTitleStudentsDetailByHouse">Students - </string>
    <string name="errorMessageGetStudentsByHouse">Error to get students by house from API</string>
</resources>